# mats-simplex-2026

./: .gitignore  CLAUDE.md  appendix.lyx  lib.py  main.ipynb  main.lyx  mess3.py  plots.py  pyproject.toml  sim.lyx  transformer.py
