[project]
name = "mats-simplex-2026"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "ipykernel",
    "wandb",
    "umap-learn",
    "scipy",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
